# relational_selth

./: LICENSE  numerical_illustrations.py  plot_benchmark_results.py  plot_numerical_study.py  plot_simpleRGNN_results.py  simple_empirics.py  visualize_empirical.py  wl_gambling_submission.ipynb
shared-experiments/: pruning.py
temporal-graph-nn/: run_selth_experiment.py  sweep_selth.sh
temporal-graph-nn/selth/: __init__.py
temporal-graph-nn/selth/config/: __init__.py  experiment_config.py
temporal-graph-nn/selth/utils/: __init__.py  experiment_tracker.py  logging_config.py
temporal-graph-nn/src/: hyper.py  models.py
utils/: classes.py  functions.py
ximp/: .gitignore  README.md  environment.yml  evaluation.ipynb  extract_all_results.py  main.py  main_batch.py  pyproject.toml  requirements.txt  run_selth_experiment.py  sweep_selth.sh
ximp/data/polaris/admet/raw/: test_polaris.csv  train_polaris.csv
ximp/data/polaris/potency/raw/: test_polaris.csv  train_polaris.csv
ximp/hyperparams/: global_best_params.csv  val_best_params.csv
ximp/notebooks/: erg_analysis.ipynb
ximp/scripts/: generate_jobs_scripts_ecfp_admet.sh  generate_jobs_scripts_ecfp_molnet.sh  generate_jobs_scripts_ecfp_potency.sh  generate_jobs_scripts_gnn_admet.sh  generate_jobs_scripts_gnn_molnet.sh  generate_jobs_scripts_gnn_potency.sh  generate_jobs_scripts_ximp_admet.sh  generate_jobs_scripts_ximp_molnet.sh  generate_jobs_scripts_ximp_potency.sh
ximp/src/: data.py  himp.py  metric_utils.py  models.py  trainer.py  transform.py  utils.py  ximp.py
