[project]
name = "XIMP"
version = "0.1.0"
description = "Cross Graph Inter-Message Passing for Molecule Property Prediction"
readme = "README.md"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "W", "C", "N", "I"]
# F401: Module imported but unused; F403: unable to detect undefined names
ignore = ["F401", "F403"]

[tool.ruff.format]
line-ending = "lf"
quote-style = "double"

[tool.pylance]
typeCheckingMode = "basic"
